--- a/illengan/assets/css/chef/style.css
+++ b/illengan/assets/css/chef/style.css
@@ -35,3 +35,31 @@ body{
 .c-focus:hover a{
     color: #363636 !important;
 }
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #343a40!important;
+    min-width: 160px;
+    margin-top: 3px;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    float: none;
+    color: rgb(182, 179, 179);
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+
+  .dropdown-content a:hover {
+      color: white;
+  }
+  .show {display:block;}
+
+  .btn {
+      overflow: auto;
+      width: auto;
+  }
