--- a/illengan/assets/css/barista/style.css
+++ b/illengan/assets/css/barista/style.css
@@ -21,9 +21,11 @@ table{
     border:1px solid #ececec;
     border-radius:38px;
 }
-.c-focus a{
+/* .c-focus a{
     color: #ececec !important;
 }
+
 .c-focus:hover a{
     color: #363636 !important;
-}
+} */
+
