Initial OR and DR in barista module

--- a/illengan/assets/css/barista/style.css
+++ b/illengan/assets/css/barista/style.css
@@ -13,7 +13,7 @@ tbody{
     background: white;
 }
 table{
-    border:1px solid whitesmoke;
+    border:1px solid whitesmoke;\
 }
 .nav-logo{
     width: 38px;
@@ -21,6 +21,7 @@ table{
     border:1px solid #ececec;
     border-radius:38px;
 }
+
 /* .c-focus a{
     color: #ececec !important;
 }
