--- a/illengan/assets/css/chef/style.css
+++ b/illengan/assets/css/chef/style.css
@@ -63,3 +63,32 @@ body{
       overflow: auto;
       width: auto;
   }
+
+  
+.dropdown-content1 {
+    display: none;
+    position: absolute;
+    background-color: #343a40!important;
+    min-width: 160px;
+    margin-top: 3px;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content1 a {
+    float: none;
+    color: rgb(182, 179, 179);
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+
+  .dropdown-content1 a:hover {
+      color: white;
+  }
+  .show {display:block;}
+
+  .btn {
+      overflow: auto;
+      width: auto;
+  }
