--- a/illengan/assets/css/admin/dashboard.css
+++ b/illengan/assets/css/admin/dashboard.css
@@ -1,7 +1,54 @@
-span.cnumber-text {
-    font-size: 32px;
-    color: #35f384;
+.card-header-1 {
+    background: darkblue;
+    position: relative;
+    top: -30px;
+    left: 5%;
+    height: 80px;
+    width: 80px;
+    margin-top: 20px;
 }
-.csub-text {
-    font-size: 17px;
+
+.card-header-2 {
+    background: green;
+    position: relative;
+    top: -30px;
+    left: 5%;
+    height: 80px;
+    width: 80px;
+    margin-top:20px;
+}
+
+.card-header-3 {
+    background: indigo;
+    position: relative;
+    top: -30px;
+    left: 5%;
+    height: 80px;
+    width: 80px;
+    margin-top:20px;
+}
+
+.card-header-4 {
+    background: darkred;
+    position: relative;
+    top: -30px;
+    left: 5%;
+    height: 80px;
+    width: 80px;
+    margin-top:20px;
+}
+
+.card-top {
+    margin-top: -25% !important;
+}
+
+.card-content-text {
+    text-align: right;
+}
+
+.card-img {
+    height: 60%;
+    width: 60%;
+    margin: auto;
+    display: block;
 }
