--- a/illengan/assets/css/admin/dashboard.css
+++ b/illengan/assets/css/admin/dashboard.css
@@ -2,9 +2,9 @@
     background: #1c1ce0;
     position: relative;
     top: -30px;
-    left: 5%;
-    height: 80px;
-    width: 80px;
+    left: 4%;
+    height: 75px;
+    width: 75px;
     margin-top: 20px;
 }
 
@@ -12,9 +12,9 @@
     background: #0ac70a;
     position: relative;
     top: -30px;
-    left: 5%;
-    height: 80px;
-    width: 80px;
+    left: 4%;
+    height: 75px;
+    width: 75px;
     margin-top:20px;
 }
 
@@ -22,9 +22,9 @@
     background: #8210d3;
     position: relative;
     top: -30px;
-    left: 5%;
-    height: 80px;
-    width: 80px;
+    left: 4%;
+    height: 75px;
+    width: 75px;
     margin-top:20px;
 }
 
@@ -32,9 +32,9 @@
     background: #ca1010;
     position: relative;
     top: -30px;
-    left: 5%;
-    height: 80px;
-    width: 80px;
+    left: 4%;
+    height: 75px;
+    width: 75px;
     margin-top:20px;
 }
 
@@ -44,6 +44,7 @@
 
 .card-content-text {
     text-align: right;
+    right: -110%;
 }
 
 .card-img {
@@ -52,3 +53,4 @@
     margin: auto;
     display: block;
 }
+
