--- a/illengan/assets/css/barista/style.css
+++ b/illengan/assets/css/barista/style.css
@@ -22,6 +22,128 @@ table{
     border-radius:38px;
 }
 
+.leftNav {
+    display: flex;
+    flex-direction: column;
+    background-color: rgba(49, 49, 49, 0.664);
+    padding: 0px 5px 60px 5px;
+    position: fixed;
+    align-self: center;
+    left: 0;
+    margin-top: 0;
+    top: 52px;
+    height: 100%;
+    overflow: auto;
+    min-width: 150px;
+    z-index: 5;
+}
+
+#shortcutKeys {
+    height: 100%;
+    padding: 0px 15px 20px;
+    background-color: rgba(0, 0, 0, 0.123);
+    border-top: 2px solid rgba(255, 255, 255, 0.288);
+}
+
+#shortcutKeys div {
+    border: 3px solid rgba(22, 22, 22, 0.527);
+    background-color: white;
+    transition: 0.5s;
+    padding: 3px 10px;
+    text-decoration: none !important;
+    margin-top: 10px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+}
+
+#shortcutKeys div span {
+    color: black;
+    text-decoration: none !important;
+    font-size: 15px;
+    align-self: center;
+    font-weight: 500;
+}
+
+#shortcutKeys div span:first-of-type {
+    opacity: 0.7;
+    margin-right: 5px;
+}
+#shortcutKeys div:hover {
+    border: 3px solid rgb(161, 121, 88);
+    transition: 0.5s;
+    text-decoration: none !important;
+}
+
+a {
+    text-decoration: none !important;
+    cursor: pointer;
+}
+.addOrder {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+}
+.mainkey {
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+    border: 0 !important;
+    background: none !important;
+    font-weight: 500 !important;
+}
+
+.mainkey span {
+    color: white !important;
+}
+.leftNav button {
+    border: 2px solid rgba(255, 255, 255, 0.308);
+}
+.active {
+    border: 3px solid rgb(142, 212, 142) !important;
+    transform: scale(1.05);
+}
+
+.non-active {
+    border: 3px solid rgba(0, 128, 0, 0);
+    transform: none;
+    transition: 0.5s;
+}
+
+.table-container {
+    border: 3px solid rgba(0, 128, 0, 0);
+    transition: 0.3s;
+}
+
+.icons {
+    cursor: pointer;
+    border: 2px solid white;
+    border-radius: 100px;
+    height: 40px;
+    width: 40px;
+    padding: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white !important;
+}
+
+.icons-go {
+    display: flex;
+    justify-content: center;
+}
+
+.align-center {
+    display: flex;
+    text-align: center;
+    align-items: center;
+    flex-direction: row;
+    padding: 5px;
+}
+
 /* .c-focus a{
     color: #ececec !important;
 }
